--- a/h1n1_vaccine_prediction.ipynb
+++ b/h1n1_vaccine_prediction.ipynb
@@ -2,22 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "df28fdf6",
+   "execution_count": 33,
+   "id": "4bafc25d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imblearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3948\\3792795195.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mimblearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mover_sampling\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSMOTE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolors\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mListedColormap\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: imblearn in c:\\users\\user\\anaconda3\\lib\\site-packages (0.0)\n",
+      "Requirement already satisfied: imbalanced-learn in c:\\users\\user\\anaconda3\\lib\\site-packages (from imblearn) (0.10.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (2.2.0)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.0.2)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.9.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.21.5)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.2.0)\n"
      ]
     }
    ],
+   "source": [
+    "!pip install imblearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9d938a57",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -36,8 +48,411 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "dc903388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "14933e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv(\"dataset/h1n1_vaccine_prediction.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6ff8e78b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_id</th>\n",
+       "      <th>h1n1_worry</th>\n",
+       "      <th>h1n1_awareness</th>\n",
+       "      <th>antiviral_medication</th>\n",
+       "      <th>contact_avoidance</th>\n",
+       "      <th>bought_face_mask</th>\n",
+       "      <th>wash_hands_frequently</th>\n",
+       "      <th>avoid_large_gatherings</th>\n",
+       "      <th>reduced_outside_home_cont</th>\n",
+       "      <th>avoid_touch_face</th>\n",
+       "      <th>...</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>income_level</th>\n",
+       "      <th>marital_status</th>\n",
+       "      <th>housing_status</th>\n",
+       "      <th>employment</th>\n",
+       "      <th>census_msa</th>\n",
+       "      <th>no_of_adults</th>\n",
+       "      <th>no_of_children</th>\n",
+       "      <th>h1n1_vaccine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Below Poverty</td>\n",
+       "      <td>Not Married</td>\n",
+       "      <td>Own</td>\n",
+       "      <td>Not in Labor Force</td>\n",
+       "      <td>Non-MSA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Below Poverty</td>\n",
+       "      <td>Not Married</td>\n",
+       "      <td>Rent</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>MSA, Not Principle  City</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&lt;= $75,000, Above Poverty</td>\n",
+       "      <td>Not Married</td>\n",
+       "      <td>Own</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>MSA, Not Principle  City</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Below Poverty</td>\n",
+       "      <td>Not Married</td>\n",
+       "      <td>Rent</td>\n",
+       "      <td>Not in Labor Force</td>\n",
+       "      <td>MSA, Principle City</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>&lt;= $75,000, Above Poverty</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>Own</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>MSA, Not Principle  City</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   unique_id  h1n1_worry  h1n1_awareness  antiviral_medication  \\\n",
+       "0          0         1.0             0.0                   0.0   \n",
+       "1          1         3.0             2.0                   0.0   \n",
+       "2          2         1.0             1.0                   0.0   \n",
+       "3          3         1.0             1.0                   0.0   \n",
+       "4          4         2.0             1.0                   0.0   \n",
+       "\n",
+       "   contact_avoidance  bought_face_mask  wash_hands_frequently  \\\n",
+       "0                0.0               0.0                    0.0   \n",
+       "1                1.0               0.0                    1.0   \n",
+       "2                1.0               0.0                    0.0   \n",
+       "3                1.0               0.0                    1.0   \n",
+       "4                1.0               0.0                    1.0   \n",
+       "\n",
+       "   avoid_large_gatherings  reduced_outside_home_cont  avoid_touch_face  ...  \\\n",
+       "0                     0.0                        1.0               1.0  ...   \n",
+       "1                     0.0                        1.0               1.0  ...   \n",
+       "2                     0.0                        0.0               0.0  ...   \n",
+       "3                     1.0                        0.0               0.0  ...   \n",
+       "4                     1.0                        0.0               1.0  ...   \n",
+       "\n",
+       "    race     sex               income_level  marital_status  housing_status  \\\n",
+       "0  White  Female              Below Poverty     Not Married             Own   \n",
+       "1  White    Male              Below Poverty     Not Married            Rent   \n",
+       "2  White    Male  <= $75,000, Above Poverty     Not Married             Own   \n",
+       "3  White  Female              Below Poverty     Not Married            Rent   \n",
+       "4  White  Female  <= $75,000, Above Poverty         Married             Own   \n",
+       "\n",
+       "           employment                census_msa  no_of_adults  no_of_children  \\\n",
+       "0  Not in Labor Force                   Non-MSA           0.0             0.0   \n",
+       "1            Employed  MSA, Not Principle  City           0.0             0.0   \n",
+       "2            Employed  MSA, Not Principle  City           2.0             0.0   \n",
+       "3  Not in Labor Force       MSA, Principle City           0.0             0.0   \n",
+       "4            Employed  MSA, Not Principle  City           1.0             0.0   \n",
+       "\n",
+       "   h1n1_vaccine  \n",
+       "0             0  \n",
+       "1             0  \n",
+       "2             0  \n",
+       "3             0  \n",
+       "4             0  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "16fa0288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking data is imbalanced or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5654e1fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    21033\n",
+       "1     5674\n",
+       "Name: h1n1_vaccine, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.h1n1_vaccine.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "34a7c666",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26707, 34)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8f4a919f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Missing value analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1db205c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "unique_id                     0.000000\n",
+       "h1n1_worry                    0.344479\n",
+       "h1n1_awareness                0.434343\n",
+       "antiviral_medication          0.265848\n",
+       "contact_avoidance             0.778822\n",
+       "bought_face_mask              0.071142\n",
+       "wash_hands_frequently         0.157262\n",
+       "avoid_large_gatherings        0.325757\n",
+       "reduced_outside_home_cont     0.307036\n",
+       "avoid_touch_face              0.479275\n",
+       "dr_recc_h1n1_vacc             8.087767\n",
+       "dr_recc_seasonal_vacc         8.087767\n",
+       "chronic_medic_condition       3.635751\n",
+       "cont_child_undr_6_mnths       3.070356\n",
+       "is_health_worker              3.010447\n",
+       "has_health_insur             45.957989\n",
+       "is_h1n1_vacc_effective        1.464036\n",
+       "is_h1n1_risky                 1.452803\n",
+       "sick_from_h1n1_vacc           1.479013\n",
+       "is_seas_vacc_effective        1.729884\n",
+       "is_seas_risky                 1.924589\n",
+       "sick_from_seas_vacc           2.010709\n",
+       "age_bracket                   0.000000\n",
+       "qualification                 5.268282\n",
+       "race                          0.000000\n",
+       "sex                           0.000000\n",
+       "income_level                 16.561201\n",
+       "marital_status                5.272026\n",
+       "housing_status                7.645936\n",
+       "employment                    5.477965\n",
+       "census_msa                    0.000000\n",
+       "no_of_adults                  0.932340\n",
+       "no_of_children                0.932340\n",
+       "h1n1_vaccine                  0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.isnull().sum()/len(df1)*100 # missing value in percentage "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d6e26045",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dropping the column because it has more than 45% data is missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "cb6712eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19642, 33)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df1.drop(\"has_health_insur\",axis = 1)\n",
+    "df1 = df1.dropna()\n",
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "157c0cbc",
+   "id": "4b31b95e",
    "metadata": {},
    "outputs": [],
    "source": []
