--- a/h1n1_vaccine_prediction.ipynb
+++ b/h1n1_vaccine_prediction.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "87765d74",
+   "execution_count": 48,
+   "id": "f5d16d1a",
    "metadata": {},
    "outputs": [
     {
@@ -12,11 +12,11 @@
      "text": [
       "Requirement already satisfied: imblearn in c:\\users\\user\\anaconda3\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied: imbalanced-learn in c:\\users\\user\\anaconda3\\lib\\site-packages (from imblearn) (0.10.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (2.2.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.2.0)\n",
       "Requirement already satisfied: scikit-learn>=1.0.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.0.2)\n",
       "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.9.1)\n",
       "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.21.5)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.2.0)\n"
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (2.2.0)\n"
      ]
     }
    ],
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "639f35be",
+   "execution_count": 49,
+   "id": "5575acdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "46175182",
+   "execution_count": 50,
+   "id": "1391d50e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "4df17e08",
+   "execution_count": 51,
+   "id": "6d167e6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "6c73e04b",
+   "execution_count": 52,
+   "id": "1d7b011d",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,8 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "8816b5d9",
+   "execution_count": 53,
+   "id": "fa1c43c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "9609556f",
+   "execution_count": 54,
+   "id": "d07b87f1",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "Name: h1n1_vaccine, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,8 +332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "c7ce33ec",
+   "execution_count": 55,
+   "id": "32695dd9",
    "metadata": {
     "scrolled": true
    },
@@ -344,7 +344,7 @@
        "(26707, 34)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,17 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "38cc37f7",
+   "execution_count": 56,
+   "id": "ef2ad92d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19642"
+       "26707"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,8 +376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "f3f22765",
+   "execution_count": 57,
+   "id": "f5adc663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,9 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "e1080ad6",
-   "metadata": {},
+   "execution_count": 59,
+   "id": "3483dc28",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -430,7 +432,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,8 +443,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "ea475326",
+   "execution_count": 60,
+   "id": "340a05b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26707"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "adfe0ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,8 +474,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "06e775d3",
+   "execution_count": 62,
+   "id": "fc150117",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +484,7 @@
        "(19642, 33)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,8 +497,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "id": "785c0510",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19642"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#After Dropping\n",
+    "\n",
+    "len(df1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
-   "id": "3b09c455",
+   "id": "1847ae1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0cc36907",
+   "id": "39422d48",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "610417ef",
+   "id": "7d518214",
    "metadata": {},
    "outputs": [],
    "source": []
