--- a/h1n1_vaccine_prediction.ipynb
+++ b/h1n1_vaccine_prediction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e2dac442",
+   "id": "ab98be97",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "27440783",
+   "id": "a5b5f052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d6e02c59",
+   "id": "9ee1486d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "08d4ca9d",
+   "id": "fed0064d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4bf6f53b",
+   "id": "5cf6e3e9",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f89753fd",
+   "id": "16007953",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f89d6215",
+   "id": "ea6909a4",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8d70759e",
+   "id": "02f521b1",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "aae0a90e",
+   "id": "91e2e46f",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "789ac5bd",
+   "id": "aa1f5b86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "264d12cd",
+   "id": "5a4c7e03",
    "metadata": {
     "scrolled": true
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "634c5aee",
+   "id": "67d77b66",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0909773a",
+   "id": "3b135650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4a9e0156",
+   "id": "49197aac",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b15e258a",
+   "id": "8ebadb75",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
     }
    ],
    "source": [
-    "#After Dropping\n",
+    "# After Dropping\n",
     "\n",
     "len(df1)"
    ]
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "26ea2f6b",
+   "id": "306a3596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "dedfb622",
+   "id": "10698441",
    "metadata": {},
    "outputs": [
     {
@@ -559,8 +559,10 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e503be91",
-   "metadata": {},
+   "id": "180ad500",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -615,8 +617,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "2fc725a2",
+   "execution_count": 75,
+   "id": "823694c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # We need to replce age bracate with labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "ea9aada9",
    "metadata": {},
    "outputs": [
     {
@@ -633,17 +645,17 @@
        "26702    4\n",
        "26703    0\n",
        "26706    4\n",
-       "Name: age_bracket, Length: 19642, dtype: int32"
+       "Name: age_bracket, Length: 19642, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn import preprocessing\n",
-    "df1.age_bracket.unique() # we need to replce age bracate with labes\n",
+    "df1.age_bracket.unique()\n",
     "le = preprocessing.LabelEncoder()\n",
     "df1['age_bracket'] = le.fit_transform(df1.age_bracket.values)\n",
     "df1['age_bracket']"
@@ -652,8 +664,10 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5f39f029",
-   "metadata": {},
+   "id": "121e0bf0",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -684,9 +698,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "99950c56",
+   "execution_count": null,
+   "id": "3532b5c2",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All column converted to numeric data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "ecca605d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here le is the preprocessing encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "1c64b52a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1071,7 +1107,7 @@
        "[19642 rows x 33 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,13 +1122,23 @@
     "df1.census_msa = le.fit_transform(df1.census_msa.values)\n",
     "\n",
     "\n",
-    "df1 # all column converted to numeric data"
+    "df1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "e3017f31",
+   "execution_count": 84,
+   "id": "113a3bc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating independent feature & Dependent Feature "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "441f65df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,8 +1148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "b5e7183b",
+   "execution_count": 80,
+   "id": "8bd20eb5",
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1157,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ACCURACY OF THE MODEL:  0.8274370068719776\n"
+      "ACCURACY OF THE MODEL:  0.8317638075846271\n"
      ]
     }
    ],
@@ -1134,8 +1180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "c9edd83c",
+   "execution_count": 81,
+   "id": "4c2f2f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "a9e23b8f",
+   "id": "cbdf4e78",
    "metadata": {},
    "outputs": [
     {
@@ -1176,8 +1222,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "id": "fe9e29b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test=train_test_split(x_smot, y_smot,test_size=0.20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "7c8715ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ACCURACY OF THE MODEL:  0.8949107732980833\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators = 100)\n",
+    "clf.fit(x_train, y_train)\n",
+    " \n",
+    "# performing predictions on the test dataset\n",
+    "y_pred = clf.predict(x_test)\n",
+    " \n",
+    "# metrics are used to find accuracy or error\n",
+    "from sklearn import metrics \n",
+    "print()\n",
+    "score2 =  metrics.accuracy_score(y_test, y_pred)\n",
+    "# using metrics module for accuracy calculation\n",
+    "print(\"ACCURACY OF THE MODEL: \", metrics.accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "eab308db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before smot accuracy is: 0.8274370068719776\n",
+      "after smot accuracy is: 0.8949107732980833\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"before smot accuracy is:\",score1)\n",
+    "print(\"after smot accuracy is:\",score2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7b445eca",
+   "id": "50b00bd0",
    "metadata": {},
    "outputs": [],
    "source": []
