--- a/h1n1_vaccine_prediction.ipynb
+++ b/h1n1_vaccine_prediction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "94159ce8",
+   "id": "ffa0954b",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7f541508",
+   "id": "cf327c92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3e9e992",
+   "id": "2948bda7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f2d3411a",
+   "id": "da6c8889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "823c58fb",
+   "id": "2203d4ce",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e585495f",
+   "id": "b9da63f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6136bf38",
+   "id": "3a78d691",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1f7cc13a",
+   "id": "033299a9",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2fa1a2e4",
+   "id": "a5763d47",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c901a064",
+   "id": "1cd86e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e4155c2b",
+   "id": "479843ea",
    "metadata": {
     "scrolled": true
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "75477b7c",
+   "id": "2aea1c55",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c5513894",
+   "id": "06577970",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "09f79ce3",
+   "id": "43ef0f89",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "477f719c",
+   "id": "36c62cc7",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c3031d74",
+   "id": "92b21dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3cbf34e1",
+   "id": "5b4e291a",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0a0726a1",
+   "id": "588083fb",
    "metadata": {
     "scrolled": true
    },
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b37a0c13",
+   "id": "23954bc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "95490baa",
+   "id": "f2d123ea",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1366202a",
+   "id": "d2f5cba9",
    "metadata": {
     "scrolled": true
    },
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "52b0520a",
+   "id": "1ef3827e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c93d513f",
+   "id": "8a8c5761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "27289cef",
+   "id": "7e1db5fd",
    "metadata": {
     "scrolled": true
    },
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "de2084ac",
+   "id": "60608170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1f2c2d06",
+   "id": "af636a50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c1d65fba",
+   "id": "f6627d71",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "56e7ed56",
+   "id": "57000b66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d0162bd9",
+   "id": "75b1b3dd",
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2109f0b2",
+   "id": "46979d93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c413b941",
+   "id": "7a0799af",
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "47c0ccdb",
+   "id": "96078a83",
    "metadata": {},
    "outputs": [
     {
@@ -1281,9 +1281,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d235015",
+   "metadata": {},
+   "source": [
+    "What is n_estimators?\n",
+    "\n",
+    "- The n_estimators parameter in this line of code specifies the number of trees in the random forest. The more trees in the forest, the more accurate the predictions can be, but the more computationally expensive it can be to train and use the model. 100 is a commonly used default value that strikes a balance between accuracy and computational efficiency."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bab7977f",
+   "id": "b97ca285",
    "metadata": {},
    "outputs": [],
    "source": []
